[package]
name = "voting-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
bls12_381 = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["net", "rt-multi-thread"] }
voting = { git = "https://github.com/SamuelSchlesinger/voting" }
